<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SpamDeck</string>
    <string name="connectionErrorHTML">Impossible connection</string>
    <string name="twitchUnjoinableHTML">Impossible to join the Twitch servers, check your connection and restart app</string>
    <string name="unmapped">Unmapped</string>
    <string name="connect">Connect</string>
    <string name="channelname">Name of the channel to join</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="buttonname">Button name</string>
    <string name="messagewithexplainations">Message (the one which will be send to twitch)</string>
    <string name="errorchannelvoid">Please enter a channel name</string>
    <string name="forspam">For spam\n(will delete last word half the time)</string>
    <string name="title_activity_about_tab">AboutTab</string>
    <string name="About">About</string>
    <string name="ethaddr" translatable="false">0x55dF1Ea2933AEb271fFae56AE8f464A5AC23a3b1</string>
    <string name="SocialMedia">Socials medias</string>
    <string name="chosenewchannel">Chose an other channel</string>
    <string name="legal">Legal</string>
    <string name="legalcontent">Icons :\nmaterial.io\nwww.flaticon.com/authors/pixel-perfect\n\nLibraries:\ngithub.com/studioidan/HttpAgent\n\nLicences :\nAll icons/logos/trademark
        own to their respective owners, even if they aren\'t mentioned bellow\n
        Twitch logo, Twitch trademark, \"Glitch\", and all other resources that fit in intellectual property of Twitch, are property of Twitch.tv, service owned by Amazon.com, Inc.\n
        YouTube logo, trademark, and all other resources that fit in intellectual property of Youtube, are property of YouTube, LLC. owned by Alphabet Inc. (Google)\n
        Octocat (Github logo), and all other resources that fit in intellectual property of Github, are property of GitHub, Inc.\n

        (If there is any issue with what\'s wrote above (ex: company name misspelled; something
        that\'s in your property or your organisation property, appear in app or in the source code
        but not above; name or logo that doesn\'t appear like you want (like (tm) or © missing); bad
        attributions of some resources; or any other kind of legal issue) please contact me thought
        my email address given on Github or on the Play store page of the app, before engage
        procedures, so I can fix this issue, I\'m a beginner with publishing apps or legal issues in
        general so it\'s certainly not perfect… sorry)</string>
    <string name="bigadthank" tools:ignore="UnusedResources">Thank you, it helps me a bit on the road of the be£t mon€y wor£d</string>
    <string name="titlefirststart">Welcome to Spamdeck</string>
    <string name="firststartexplainations">Hi,\nSpamdeck is an Android app that let you 40 customizable buttons for sending preset messages in a Twitch chat.\n\nFor doing that, this app will need access to your Twitch account, a Twitch page will let you grant to the app this access.\nDon\'t worry, this app don\'t saves anything (if you have a doubt, verify the code at Github), but Twitch will remember you.\n\nEnjoy, and don\'t spray hate on Twitch ;)</string>
    <string name="chosechannel">Chose a channel</string>
    <string name="recentchannels">Recent channels</string>
    <string name="takealook">Take a look to the \"About\" tab to see how to use this app</string>
    <string name="howtouseTitle">How to use</string>
    <string name="howtouse">1. Chose the channel you want to connect to\n2. Tap on \"Connect\"\n3. Here you have your 40 buttons (by defalut, all of them are named \"Unmapped\" and hasn\'t any message associated)\n4. Long click on any button you want to modify\n    Here you can set the button\'s name, the friendly message it would send to Twitch, and set the spam mode on or off\n5. Click \"ok\" to save\n6. Repeat 4. and 5. any time on any button to modify it \n7. You now just have to click, ENJOY ! (but don\'t spam (and don\'t think about the app\'s name))</string>
</resources>
